--- a/style.css
+++ b/style.css
@@ -12,7 +12,10 @@ body {
     text-align: center;
 }
 .stuck {
-    position:fixed;
-    top:0;
-    box-shadow:0 2px 4px rgba(0, 0, 0, .3);
+    position: fixed;
+    top: 0;
+    width: 99%;
+}
+p {
+    font-size: 21px;
 }
